--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <p>If you have questions or concerns about these Terms or your data, you can contact us at:hello@cultosglobal.io</p>
     <ul>
         
-        <li><strong>Address:</strong> Cultoverse Fintech Pvt Ltd<br>
+        <li><strong></strong> Cultoverse Fintech Pvt Ltd<br>
             </li>
     </ul>
 
