--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Terms and Conditions for Cultos App by Cultoverse Fintech Pvt Ltd">
-    <title>Terms and Conditions - Cultos</title>
+    <meta name="description" content="Terms and Conditions for LMNRI App by LuminariAI Trading">
+    <title>Terms and Conditions - LMNRI</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,10 +34,10 @@
 </head>
 <body>
     <h1>Terms and Conditions</h1>
-    <p>Welcome to <strong>Cultos</strong> (hereinafter referred to as "the App"), operated by <strong>Cultoverse Fintech Pvt Ltd</strong> (hereinafter referred to as "the Company"). By using the App, you agree to comply with and be bound by these Terms and Conditions. If you do not agree to these Terms, please do not use the App.</p>
+    <p>Welcome to <strong>LMNRI</strong> (hereinafter referred to as "the App"), operated by <strong>LuminariAI Trading</strong> (hereinafter referred to as "the Company"). By using the App, you agree to comply with and be bound by these Terms and Conditions. If you do not agree to these Terms, please do not use the App.</p>
 
     <h2>1. Introduction</h2>
-    <p>Welcome to <strong>Cultos</strong>, operated by <strong>Cultoverse Fintech Pvt Ltd</strong>. By using the App, you agree to comply with these Terms and Conditions. If you do not agree, please discontinue use of the App.</p>
+    <p>Welcome to <strong>LMNRI</strong>, operated by <strong>LuminariAI Trading</strong>. By using the App, you agree to comply with these Terms and Conditions. If you do not agree, please discontinue use of the App.</p>
 
     <h2>2. User Eligibility</h2>
     <p>The App is intended for individuals aged 18 or older. By registering, you confirm that you meet the age requirement and have the legal capacity to agree to these Terms.</p>
@@ -102,15 +102,15 @@
     <p>We reserve the right to update or modify these Terms at any time. Continued use of the App after changes constitutes acceptance of the revised Terms.</p>
 
     <h2>14. Contact Information</h2>
-    <p>If you have questions or concerns about these Terms or your data, you can contact us at:hello@cultosglobal.io</p>
+    <p>If you have questions or concerns about these Terms or your data, you can contact us at:</p>
     <ul>
         
-        <li><strong></strong> Cultoverse Fintech Pvt Ltd<br>
+        <li><strong></strong> LuminariAI Trading<br>
             </li>
     </ul>
 
     <footer>
-        &copy; 2024 Cultoverse Fintech Pvt Ltd. All rights reserved.
+        &copy; 2024 LuminariAI Trading All rights reserved.
     </footer>
 </body>
 </html>
